--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
 
         <div class="large"></div>
 
+        <div class="large"></div>
+
+        <div class="medium"></div>
+
+        <div class="big"></div>
+
+        <div class="tiny"></div>
+
+        <div class="small"></div>
+
     </div>
 
 </body>
